folder structure change

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div class="header">
         <div class="spinning">
-            <img src="spinning-logo-black.jpg">
+            <img src="image/spinning-logo-black.jpg">
         </div>
         <div class="sub-header">
             <div class="navbar">
@@ -28,8 +29,8 @@
                 <a class="menu">GET STARTED</a>
                 <a class="menu">SPINTV<sup>TM</sup></a>
                 <div class="top-icon">
-                        <i class="fa fa-search"></i>
-                        <i class="fa fa-shopping-cart"></i>
+                    <i class="fa fa-search"></i>
+                    <i class="fa fa-shopping-cart"></i>
                 </div>
             </div>
             <div class="ham">
@@ -57,13 +58,13 @@
     </div>
     <div class="selfiepics">
         <div>
-            <img class="bpics" src="hp-854x904-instructor.jpg">
+            <img class="bpics" src="image/hp-854x904-instructor.jpg">
         </div>
         <div>
-            <img class="bpics" src="hp-854x904-banner-spin.jpg">
+            <img class="bpics" src="image/hp-854x904-banner-spin.jpg">
         </div>
         <div>
-            <img class="bpics" src="hp-854x904-instructor.jpg">
+            <img class="bpics" src="image/hp-854x904-instructor.jpg">
         </div>
     </div>
     <div class="shoptext">
@@ -71,30 +72,31 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quam ex quidem.</p>
     </div>
     <div class="apparelpics">
-        <div class="img1"><img class="apics" src="a5.jpg">
+        <div class="img1"><img class="apics" src="image/a5.jpg">
             <p>bicycle</p>
         </div>
-        <div class="img2"> <img class="apics" src="hp-mens-apparel-.jpg">
+        <div class="img2"> <img class="apics" src="image/hp-mens-apparel-.jpg">
             <p>mens apparel</p>
         </div>
-        <div  class="img3"><img class="apics" src="hp-womens-apparel-.jpg">
+        <div class="img3"><img class="apics" src="image/hp-womens-apparel-.jpg">
             <p>womens apparel</p>
         </div>
-        <div class="img4"> <img class="apics" src="a5cb20a424f98ca970ff03a4826ce562db1ca8b035be7625f9a81f51af7c.png">
+        <div class="img4"> <img class="apics"
+                src="image/a5cb20a424f98ca970ff03a4826ce562db1ca8b035be7625f9a81f51af7c.png">
             <p>spin TV</p>
         </div>
     </div>
     <div class="hrmonitorpics">
-        <div class="img5"> <img class="apics" src="computerandhrmonitor.jpg">
+        <div class="img5"> <img class="apics" src="image/computerandhrmonitor.jpg">
             <p>computer and hrmonitor</p>
         </div>
-        <div class="img6"> <img class="apics" src="hp-accessories-.jpg">
+        <div class="img6"> <img class="apics" src="image/hp-accessories-.jpg">
             <p>hp-accessories</p>
         </div>
-        <div class="img7"> <img class="apics" src="hp-dvdsmusic-.jpg">
+        <div class="img7"> <img class="apics" src="image/hp-dvdsmusic-.jpg">
             <p>DVD and Music</p>
         </div>
-        <div class="img8"><img class="apics" src="hp-training-v2.jpg">
+        <div class="img8"><img class="apics" src="image/hp-training-v2.jpg">
             <p>Training and Equipment</p>
         </div>
     </div>
@@ -103,11 +105,11 @@
             <b>As seen in</b>
         </div>
         <div class="small-img">
-            <div class="tinyimg"> <img src="hp-rolling-stone.png"></div>
-            <div class="tinyimg"> <img src="hp-shape.png"></div>
-            <div class="tinyimg"> <img src="hp-ny-times.png"></div>
-            <div class="tinyimg"> <img src="hp-mens-health.png"></div>
-            <div class="tinyimg"> <img src="hp-self.png"></div>
+            <div class="tinyimg"> <img src="image/hp-rolling-stone.png"></div>
+            <div class="tinyimg"> <img src="image/hp-shape.png"></div>
+            <div class="tinyimg"> <img src="image/hp-ny-times.png"></div>
+            <div class="tinyimg"> <img src="image/hp-mens-health.png"></div>
+            <div class="tinyimg"> <img src="image/hp-self.png"></div>
         </div>
     </div>
     <div class="ourstorytext">
@@ -115,14 +117,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, illo.</p>
     </div>
     <div class="menbikers">
-        <img class="bpic" src="hp-bikers.jpg">
+        <img class="bpic" src="image/hp-bikers.jpg">
         <div class="background-colour">
             <div class="bikertext">
-            <b>Born for the road</b>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Molestiae sunt, totam unde impedit ducimus
-                beatae <br> officia libero. Impedit? <hr style="color:black"></p>
-            <p> <b>LEARN MORE</b></p>
-        </div>
+                <b>Born for the road</b>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Molestiae sunt, totam unde impedit
+                    ducimus
+                    beatae <br> officia libero. Impedit?
+                    <hr style="color:black">
+                </p>
+                <p> <b>LEARN MORE</b></p>
+            </div>
         </div>
     </div>
     <div class="feedback">
@@ -132,7 +137,7 @@
     <div class="girlbiker">
         <div class="femalebiker">
             <div class="overflow"></div>
-            <img class="bpics" src="hp-girl-bike.jpg">
+            <img class="bpics" src="image/hp-girl-bike.jpg">
         </div>
         <div class="Btext">
             <p> <sup>"</sup> Lorem ipsum dolor sit amet consectetur adipisicing elit. In dicta veritatis veniam
