--- a/index.html
+++ b/index.html
@@ -56,14 +56,17 @@
         <b>Lorem ipsum dolor sit<sup>R</sup></b><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia beatae quidem dicta animi distinctio.</p>
     </div>
-    <div class="selfiepics">
+    <div class="selfiepics" style="position:relative">
+
         <div>
+            <button id="btnprevious" style="position:absolute">previous</button>
             <img class="bpics" src="image/hp-854x904-instructor.jpg">
         </div>
         <div>
             <img class="bpics" src="image/hp-854x904-banner-spin.jpg">
         </div>
         <div>
+            <button id="btnnext" style="position:absolute">next</button>
             <img class="bpics" src="image/hp-854x904-instructor.jpg">
         </div>
     </div>
@@ -253,6 +256,7 @@
             SPINPOWER®, THE SPINNING LOGO®, PEAK PILATES®, CROSSCORE®, RESIST-A-BALL® AND UGI®, ARE REGISTERED
             TRADEMARKS OWNED BY MAD DOGG ATHLETICS, INC. </p>
     </div>
+    <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
